--- a/builds/development/sass/style.scss
+++ b/builds/development/sass/style.scss
@@ -388,34 +388,23 @@ a:visited {
 #brands {
     padding: 0;
     height: 360px;
-    display: table;
+    display: flex;
+    flex-wrap: wrap;
     margin: auto;
+    border-right: 1px solid rgb(227, 227, 227);
 
     & > div {
-        display: table-row;
+        flex-basis: 20%;
+        border-top: 1px solid rgb(227, 227, 227);
+        border-left: 1px solid rgb(227, 227, 227);
         height: 180px;
+        vertical-align: middle;
+        display: flex;
 
-        & > div {
-            width: 20%;
-            display: table-cell;
-            border-right: 1px solid rgb(227, 227, 227);
-            border-bottom: 1px solid rgb(227, 227, 227);
-            text-align: center;
-            vertical-align: middle;
-
-            &:last-child {
-                display: table-cell;
-                border-right: 0;
-            }
-
-            img {
-                max-width: 40%;
-                max-height: 40%;
-            }
-        }
-
-        &:last-child > div {
-            border-bottom: 0;
+        img {
+            margin: auto;
+            max-width: 40%;
+            max-height: 40%;
         }
     }
 }
@@ -637,38 +626,41 @@ a:visited {
 
     & > div {
         margin-top: 60px;
-        display: table;
+        display: flex;
+        flex-wrap: wrap;
         width: 100%;
 
         & > div {
-            display: table-row;
+            flex-basis: 50%;
+            border-top: 1px solid #E1E1E1;
+            border-left: 1px solid #E1E1E1;
+            padding: 70px;
+            width: 50%;
+            display: flex;
+
+            &:last-child {
+                border-right: 1px solid #E1E1E1;
+            }
 
             & > div {
-                display: table-cell;
-                border-top: 1px solid #E1E1E1;
-                border-left: 1px solid #E1E1E1;
-                padding: 70px;
-                width: 50%;
+                display: flex;
+                flex-direction: row;
+                justify-content: flex-start;
+                align-items: center;
+                align-items: flex-start;
 
-                &:last-child {
-                    border-right: 1px solid #E1E1E1;
+                img {
+                    width: 94px;
+                    height: 94px;
+                    margin-right: 30px;
                 }
 
-                & > div {
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: flex-start;
-                    align-items: center;
-
-                    img {
-                        width: 94px;
-                        height: 94px;
-                        margin-right: 30px;
-                    }
-
-                    h3 {
-                        margin-top: 0;
-                    }
+                h3 {
+                    margin-top: 0;
+                    text-align: left;
+                }
+                p{
+                  text-align: left;
                 }
             }
         }
@@ -1426,7 +1418,7 @@ a:visited {
         }
     }
 
-    #brands > div > div img {
+    #brands > div img {
         max-width: 80%;
         max-height: 80%;
     }
@@ -1448,7 +1440,7 @@ a:visited {
         width: 100%;
     }
 
-    #made-easy > div > div > div {
+    #made-easy > div > div {
         padding: 30px;
     }
 
@@ -1468,6 +1460,7 @@ a:visited {
         padding: 0 40px;
     }
 }
+/////////////////////////////////////////////////////////////////////
 @media (max-width: 768px) {
     .block-img {
         display: none;
@@ -1521,9 +1514,10 @@ a:visited {
         }
 
         #integrated-solutions {
-          h3{
-            font-size: 16px;
-          }
+            h3 {
+                font-size: 16px;
+            }
+
             & > div {
                 display: flex;
                 justify-content: space-between;
@@ -1543,6 +1537,65 @@ a:visited {
                     }
                 }
             }
+        }
+    }
+
+    #brands {
+        height: auto;
+
+        & > div {
+            flex-basis: 33.33%;
+
+            &:last-child {
+                display: none;
+            }
+        }
+    }
+
+    #magic {
+        & > div {
+            display: flex;
+            flex-wrap: wrap;
+
+            & > div {
+                border: none;
+
+                p {
+                    display: none;
+                }
+
+                &:nth-child(1),
+                &:nth-child(2) {
+                    flex-basis: 50%;
+                }
+
+                &:nth-child(3),
+                &:nth-child(4),
+                &:nth-child(5) {
+                    flex-basis: 33.33%;
+                }
+            }
+        }
+    }
+
+#made-easy>div>div{
+  flex-basis: 100%;
+}
+
+    #video-modal {
+        .modal-dialog {
+            width: 100%;
+            padding: 0;
+            margin: 0;
+        }
+
+        .modal-content .close {
+            right: 20px;
+            z-index: 1;
+        }
+
+        .video-box {
+            min-height: 300px;
         }
     }
 }
