--- a/builds/development/sass/style.scss
+++ b/builds/development/sass/style.scss
@@ -1059,6 +1059,20 @@ footer{
             height: 100%;
         }
     }
+    .video-brands{
+      padding: 30px 0;
+      .video-box{
+        display: none;
+      }
+      .brand-box{
+        width: 100%;
+      }
+    }
+    #featured-videos{
+      .featured-video{
+        width: 100%;
+      }
+    }
 }
 //////////////////////////////////////////////////////////////////////////////
 
@@ -1301,7 +1315,7 @@ footer{
         padding-bottom: 100px;
 
         & > h2 {
-            font-size: 50px;
+            font-size: 40px;
         }
 
         & > h3 {
