--- a/builds/development/sass/style.scss
+++ b/builds/development/sass/style.scss
@@ -366,7 +366,7 @@ a:visited {
                 }
 
                 img {
-                    height: 45px;
+                    //height: 45px;
                 }
             }
         }
