--- a/builds/development/sass/style.scss
+++ b/builds/development/sass/style.scss
@@ -191,9 +191,9 @@ a:visited {
     padding: 0 24px;
 
     a {
-      font-family: 'Gotham Book';
-      font-size: 20px;
-      line-height: 50px;
+        font-family: 'Gotham Book';
+        font-size: 20px;
+        line-height: 50px;
     }
 
     a:active,
@@ -658,14 +658,15 @@ a:visited {
         }
     }
 
-    h2{
-      font-family: 'OpenSans Light';
-      font-size: 23px;
-      line-height: 50px;
-      color: #4a4a4a;
-      span{
-        font-family: 'OpenSansLight Italic';
-      }
+    h2 {
+        font-family: 'OpenSans Light';
+        font-size: 23px;
+        line-height: 50px;
+        color: #4a4a4a;
+
+        span {
+            font-family: 'OpenSansLight Italic';
+        }
     }
 
     & > div {
@@ -1158,6 +1159,7 @@ a:visited {
 
 #video-modal {
     .modal-dialog {
+        margin: auto;
         width: 70%;
     }
 
@@ -1210,7 +1212,9 @@ a:visited {
                     display: flex;
                     flex-direction: column;
                     justify-content: space-between;
-                    width: 20%;
+                    //width: 20%;
+                    flex-basis: 20%;
+                    align-items: center;
 
                     p {
                         color: #fff;
@@ -1913,7 +1917,6 @@ a:visited {
         .modal-dialog {
             width: 100%;
             padding: 0;
-            margin: 0;
         }
 
         .modal-content .close {
