--- a/builds/development/sass/style.scss
+++ b/builds/development/sass/style.scss
@@ -1380,7 +1380,7 @@ a:visited {
 
                 & > div {
                     width: 100%;
-                    background-color: transparent;
+                    //background-color: transparent;
 
                     .vjs-big-play-button {
                         top: 50%;
