--- a/builds/development/sass/style.scss
+++ b/builds/development/sass/style.scss
@@ -1066,6 +1066,10 @@ a:visited {
         width: 50%;
         padding: 30px;
 
+        & > div{
+          max-width: 100%;
+        }
+
         img {
             height: 100px;
         }
